fixup! [IMPROVEMENT] the mock-smtp-server must also accept a specific list of parameters without values.