@@ -23,6 +23,7 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Stream;
 
@@ -42,17 +43,15 @@ import com.google.common.collect.ImmutableSet;
 @JsonDeserialize(builder = Mail.Builder.class)
 public class Mail {
 
-    public static final List<String> smtpParametersWithoutValues = List.of("REQUIRETLS", "SMTPUTF8");
-
     @JsonDeserialize(builder = Parameter.Builder.class)
     public static class Parameter {
         @JsonPOJOBuilder(withPrefix = "")
         public static class Builder {
             private String name;
-            private String value;
+            private Optional<String> value;
 
             public Builder() {
-
+                this.value = Optional.empty();
             }
 
             public Builder name(String name) {
@@ -61,17 +60,13 @@ public class Mail {
             }
 
             public Builder value(String value) {
-                this.value = value;
+                this.value = Optional.ofNullable(value);
                 return this;
             }
 
             public Parameter build() {
                 Preconditions.checkState(name != null, "'name' field cannot be omitted");
-                if (smtpParametersWithoutValues.contains(name)) {
-                    return new Parameter(name, "");
-                }
-                Preconditions.checkState(value != null, "'value' field cannot be omitted");
-                return new Parameter(name, value);
+                return new Parameter(name, value.orElse(""));
             }
         }
 
@@ -81,24 +76,24 @@ public class Mail {
 
         public static Collection<Mail.Parameter> fromArgLine(String argLine) {
             return Splitter.on(' ').splitToStream(argLine)
-                    .filter(argString -> smtpParametersWithoutValues.contains(argString) || argString.contains("="))
-                    .map(Parameter::fromString)
-                    .collect(ImmutableList.toImmutableList());
+                .filter(argString -> !argString.contains(":"))
+                .map(Parameter::fromString)
+                .collect(ImmutableList.toImmutableList());
         }
 
         public static Parameter fromString(String argString) {
-            if (smtpParametersWithoutValues.contains(argString)) {
+            if (!argString.contains("=")) {
                 return Mail.Parameter.builder()
-                        .name(argString)
-                        .build();
+                    .name(argString)
+                    .build();
             }
             Preconditions.checkArgument(argString.contains("="));
             int index = argString.indexOf('=');
 
             return Mail.Parameter.builder()
-                    .name(argString.substring(0, index))
-                    .value(argString.substring(index + 1))
-                    .build();
+                .name(argString.substring(0, index))
+                .value(argString.substring(index + 1))
+                .build();
         }
 
         private final String name;
@@ -119,11 +114,10 @@ public class Mail {
 
         @Override
         public final boolean equals(Object o) {
-            if (o instanceof Parameter) {
-                Parameter that = (Parameter) o;
+            if (o instanceof Parameter that) {
 
                 return Objects.equals(this.name, that.name)
-                        && Objects.equals(this.value, that.value);
+                    && Objects.equals(this.value, that.value);
             }
             return false;
         }
@@ -136,9 +130,9 @@ public class Mail {
         @Override
         public String toString() {
             return MoreObjects.toStringHelper(this)
-                    .add("name", name)
-                    .add("value", value)
-                    .toString();
+                .add("name", name)
+                .add("value", value)
+                .toString();
         }
     }
 
@@ -180,7 +174,7 @@ public class Mail {
         }
 
         public static Recipient of(MailAddress address) {
-            return new Recipient(address, ImmutableList.of());
+            return new Recipient(address, List.of());
         }
 
         private final MailAddress address;
@@ -201,11 +195,10 @@ public class Mail {
 
         @Override
         public final boolean equals(Object o) {
-            if (o instanceof Recipient) {
-                Recipient that = (Recipient) o;
+            if (o instanceof Recipient that) {
 
                 return Objects.equals(this.address, that.address)
-                        && Objects.equals(this.parameters, that.parameters);
+                    && Objects.equals(this.parameters, that.parameters);
             }
             return false;
         }
@@ -218,9 +211,9 @@ public class Mail {
         @Override
         public String toString() {
             return MoreObjects.toStringHelper(this)
-                    .add("address", address)
-                    .add("parameters", parameters)
-                    .toString();
+                .add("address", address)
+                .add("parameters", parameters)
+                .toString();
         }
     }
 
@@ -292,12 +285,12 @@ public class Mail {
 
         public static Envelope ofAddresses(MailAddress from, MailAddress... recipients) {
             return new Envelope(from, Stream.of(recipients)
-                    .map(Recipient::of)
-                    .collect(ImmutableSet.toImmutableSet()), ImmutableSet.of());
+                .map(Recipient::of)
+                .collect(ImmutableSet.toImmutableSet()), Set.of());
         }
 
         public static Envelope of(MailAddress from, Recipient... recipients) {
-            return new Envelope(from, ImmutableSet.copyOf(Arrays.asList(recipients)), ImmutableSet.of());
+            return new Envelope(from, ImmutableSet.copyOf(Arrays.asList(recipients)), Set.of());
         }
 
         private final MailAddress from;
@@ -328,12 +321,11 @@ public class Mail {
 
         @Override
         public final boolean equals(Object o) {
-            if (o instanceof Envelope) {
-                Envelope envelope = (Envelope) o;
+            if (o instanceof Envelope envelope) {
 
                 return Objects.equals(this.from, envelope.from)
-                        && Objects.equals(this.recipients, envelope.recipients)
-                        && Objects.equals(this.mailParameters, envelope.mailParameters);
+                    && Objects.equals(this.recipients, envelope.recipients)
+                    && Objects.equals(this.mailParameters, envelope.mailParameters);
             }
             return false;
         }
@@ -346,10 +338,10 @@ public class Mail {
         @Override
         public String toString() {
             return MoreObjects.toStringHelper(this)
-                    .add("from", from)
-                    .add("recipients", recipients)
-                    .add("mailParameters", mailParameters)
-                    .toString();
+                .add("from", from)
+                .add("recipients", recipients)
+                .add("mailParameters", mailParameters)
+                .toString();
         }
     }
 
@@ -396,11 +388,10 @@ public class Mail {
 
     @Override
     public final boolean equals(Object o) {
-        if (o instanceof Mail) {
-            Mail mail = (Mail) o;
+        if (o instanceof Mail mail) {
 
             return Objects.equals(this.envelope, mail.envelope)
-                    && Objects.equals(this.message, mail.message);
+                && Objects.equals(this.message, mail.message);
         }
         return false;
     }
@@ -413,8 +404,8 @@ public class Mail {
     @Override
     public String toString() {
         return MoreObjects.toStringHelper(this)
-                .add("envelope", envelope)
-                .add("message", message)
-                .toString();
+            .add("envelope", envelope)
+            .add("message", message)
+            .toString();
     }
 }
